--- a/refs.bib
+++ b/refs.bib
@@ -6,6 +6,15 @@
   location     = {San Francisco, USA},
 }
 
+@article{Breto2009,
+  author       = {C. Breto and D. He and E. L. Ionides and A. A. King},
+  title        = {Time series analysis via mechanistic models},
+  journal      = {Annals of Applied Statistics},
+  year         = 2009,
+  volume       = 3,
+  pages        = {319-348},
+}
+
 @inbook{Brown1998,
   author       = {J. H. Brown},
   title        = {The granivory experiments at Portal},
@@ -22,6 +31,23 @@
   year         = 2017,
   publisher    = {Princeton University Press},
   location     = {Princeton, USA},
+}
+
+@book{Doucet2001,
+  author       = {A. Doucet and N. de Freitas and N. Gordon},
+  title        = {Sequential Monte Carlo methods in practice},
+  year         = 2001,
+  publisher    = {Springer-Verlag},
+  location     = {New York, USA},
+}
+
+@article{He2010,
+  author       = {D. He and E. L. Ionides and A. A. King},
+  title        = {Plug-and-play inference for disease dynamics: measles in large and small populations as a case study},
+  journal      = {Journal of the Royal Society: Interface},
+  year         = 2010,
+  volume       = 7,
+  pages        = {271-283},
 }
 
 @book{Hyndman2008,
@@ -57,6 +83,15 @@
   pages        = {18438-18443},
 }
 
+@article{Ionides2015,
+  author       = {E L. Ionides and D. Nguyen and Y. Atchade and S. Stoev and A. A. King},
+  title        = {Inference for dynamic and latent variable models via iterated, perturbed Bayes maps},
+  journal      = {Proceedings of the National Academy of Sciences, U.S.A},
+  year         = 2015,
+  volume       = 112,
+  pages        = {719-724},
+}
+
 @article{King2016,
   author       = {A. A. King and D. Nguyen and E. L. Ionides},
   title        = {Statistical Inference for Partially Observed Markov Processes via the R Package pomp},
@@ -65,6 +100,15 @@
   volume       = 69,
   pages        = {1-43},
   url          = {http://kingaa.github.io/pomp/vignettes/pompjss.pdf},
+}
+
+@article{Kitagawa1987,
+  author       = {G. Kitagawa},
+  title        = {Non-Gaussian state-space modeling of non-stationary time series},
+  journal      = {Journal of the American Statistical Association},
+  year         = 1987,
+  volume       = 82,
+  pages        = {1032-1041},
 }
 
 @online{Liboschik2017a,
@@ -90,4 +134,12 @@
   title        = {Portal forecasting},
   year         = 2018,
   url          = {http://portal.naturecast.org/},
+}
+
+@book{Pawitan2001,
+  author       = {Y. Pawitan},
+  title        = {In all likelihood},
+  year         = 2000,
+  publisher    = {Clarendon Press},
+  location     = {Oxford, England},
 }
