--- a/modeldoc.tex
+++ b/modeldoc.tex
@@ -49,21 +49,21 @@ This document describes the models used to forecast ecological predictions for t
 \label{sec:currmods}
 
 \subsection{Na\"{i}ve 1}
-\label{subsec:naive01}
+\label{subsec:currmods_naive01}
 
 "Na\"{i}ve 1" is a flexible exponential smoothing state space (ESSS) model \citep{Hyndman2008} fit to the data at the composite (site) spatial level and the composite (community) ecological level. The model is selected and fitted using the \code{ets} and \code{forecast} functions in the \textbf{forecast} package \citep{Hyndman2017} with the \code{allow.multiplicative.trend} argument set to \code{TRUE} and the \code{naive01} function in our \textbf{portalPredictions} package \citep{PortalPredictions}. ESSS models fit using \code{ets} implement what is known as the "innovations" approach to state space modeling, which assumes a single source of noise that is equivalent for the process and observation errors \citep{Hyndman2008}.
 
 ESSS models are defined according to three model structure parameters: error type, trend type, and seasonality type \citep{Hyndman2008}. Each of the parameters can be an N (none), A (additive), or M (multiplicative) state \citep{Hyndman2008}. "Na\"{i}ve 1" is fit flexibly, such that the model parameters can vary from fit to fit.
 
 \subsection{Na\"{i}ve 2}
-\label{subsec:naive02}
+\label{subsec:currmods_naive02}
 
 "Na\"{i}ve 2" is a flexible Auto-Regressive Integrated Moving Average (ARIMA) model fit to the data at the composite (site) spatial level and the composite (community) ecological level. The model is selected and fitted using the \code{auto.arima} (with the \code{lambda} argument set to 0) and \code{forecast} functions in the \textbf{forecast} package \citep{Hyndman2013, Hyndman2017} and the \code{naive02} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
 
 ARIMA models are defined according to three model structure parameters: the number of autoregressive terms (p), the degree of differencing (d), and the order of the moving average (q), and are represented as ARIMA(p, q, q) \citep{Box1970}. "Na\"{i}ve 2" is fit flexibly, such that the model parameters can vary from fit to fit.
 
 \subsection{Negative Binomial TS}
-\label{subsec:neg_binom_ts}
+\label{subsec:currmods_nbts}
 
 "Negative Binomial TS" (NBTS) is a generalized autoregressive conditional heteroskedasticity (GARCH) model with overdispersion fit to the data at the composite (site) spatial level and the articulated (species) ecological level. The model for each species is selected and fitted using the \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a} and the \code{neg\_binom\_ts} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
 
@@ -74,7 +74,7 @@ The \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a}
 Species are fit individually and then summed to produce a composite estimate. 
 
 \subsection{Poisson Environmental TS}
-\label{subsec:pois_env_ts}
+\label{subsec:currmods_pevts}
 
 "Poisson Environmental TS" (PETS) is a generalized autoregressive conditional heteroskedasticity (GARCH) model fit to the data at the composite (site) spatial level and the articulated (species) ecological level. The model for each species is selected and fitted using the \code{tsglm} function in the \textbf{tscount} package \citep{Liboschik2017a} and the \code{pois\_env\_ts} function in our \textbf{portalPredictions} package \citep{PortalPredictions}.
 
@@ -98,37 +98,49 @@ Each species is fit using the following (nonexhaustive) sets of the environmenta
 
 Currently, there is no intercept-only model included. The single best model of the 10 is selected based on AIC. Species are fit individually and then summed to produce a composite estimate. 
 
-\section{Developing Models}
+\section{Developing Model Framework}
 \label{sec:devmods}
+
+\subsection{Overview}
+\label{subsec:devmods_ov}
+
+The modeling approach proposed here is based on a data-assimilation approach to forecasting using dynamical state-space models (a.k.a. partially observed Markov process models), where the observed data are considered a partial sample of an underlying true state that evolves through time \citep{Ionides2006, King2016} and the models used to estimate and forecast the true state are iteratively evaluated and updated with each new observation. We use a suite of competing models to make inference about the historic and current state of the system and to produce forecasts of expected future observations. In addition, statistically weighted ensemble models are constructed based on long-running model accuracy. Ongoing data collections provide new observations, which are used to iteratively evaluate the models and produce new predictions via the forecast cycle \citep{Dietze2017}. 
 
 \subsection{General Framework and Notation}
 \label{subsec:devmods_gf}
 
-The framework I propose here is based on a data-assimilation approach to forecasting using dynamical state-space models (a.k.a. partially observed Markov process models), where the observed data are considered a partial sample of an underlying true state that evolves through time \citep{Ionides2006, King2016} and the models used to estimate and forecast the true state are iteratively evaluated and updated with each new observation. We use a suite of competing models to make inference about the historic and current state of the system and to produce forecasts of expected future observations. Ongoing data collections provide new observations, which are used to iteratively evaluate the models and produce new predictions via the forecast cycle \citep{Dietze2017}. 
-
-We use $y$ to represent a singular observation and $y_{ijk}$ is the observed number of rodents of species $i$ in plot $j$ at survey $k$. Because $y_{ijk}$ is a count of individuals, the variable is non-negative and integer-valued. The observed numbers of individuals across each species $i$ in $1 \ldots I$ and each plot $j$ in $1 \ldots J$ for a given survey $k$ is an $I \times J$ matrix $\textbf{Y}_k$. The series of observations for surveys $1 \ldots K$ is given by $\textbf{Y}_{1:K}$ (an $I \times J \times K$ array). 
+We use $y$ to represent a singular observation and $y_{ijk}$ is the observed number of rodents of species $i$ in plot $j$ at survey $k$. Because $y_{ijk}$ is a count of individuals, the variable is non-negative and integer-valued. The observed numbers of individuals across each species $i$ in $1 \ldots I$ and each plot $j$ in $1 \ldots J$ for a given survey $k$ is an $I \times J$ matrix $\textbf{Y}_k$. The series of observations for surveys $1 \ldots K$ is given by $\textbf{Y}_{1:K}$ (an $I \times J \times K$ array). We use $k$ as an index notation to represent discrete observation events (surveys) that occur through continuous time $t$, where $t_k$ refers to the time of survey $k$.
 
 Our specific observations are noted with a superscripted asterisk ($y^{*}$): the number of individuals of species $i$ actually observed in plot $j$ during survey $k$ is $y^{*}_{ijk}$, the head-counts of all species in all plots observed during survey $k$ is $\textbf{Y}^{*}_{k}$, and the series of actual observations is $\textbf{Y}^{*}_{1:K}$. A future observation (\emph{i.e.}, what is to be forecast) is denoted $\tilde{y}$, such that the number of species $i$ in plot $j$ that will exist at the next observation is $\tilde{y}_{ij(k+1)}$, the number of all species in all plots $n$ observations into the future is $\tilde{\textbf{Y}}_{k+n}$, and the series of $N$ future observations is $\tilde{\textbf{Y}}_{(k+1):(k+N)}$. Combining these notations, our future specific data are represented by both a tilde and an asterisk. An individual datum would be $\tilde{y}^{*}_{ij(k+n)}$ and the set of specific future data is $\tilde{\textbf{Y}}^{*}_{(k+1):(k+N)}$.
 
-The suite of $M$ competing models is compiled to forecast $\tilde{\textbf{Y}}_{(k+1):(k+N)}$ based on $\textbf{Y}_{1:K}$. Each model ($\mathcal{M}_m$) is defined by three functions that describe the evolution of the underlying state and the data collected on it. $f_{y_k|z_k}$ is a general observation function that translates the true underlying state ($\textbf{Z}_k$, number or density of each species in each plot, following the same structure and subscript notation as $\textbf{Y}_k$) into the number of each species actually observed in each plot ($\textbf{Y}_k$):
+The suite of $M$ competing models is compiled to forecast $\tilde{\textbf{Y}}_{(k+1):(k+N)}$ based on $\textbf{Y}_{1:K}$. Each model ($\mathcal{M}_m$, for $m$ in $1 \ldots M$) is defined by three functions that describe the evolution of the underlying state and the data collected on it. $f_{y_k|z_k}$ is a general observation function that translates the true underlying state ($\textbf{Z}_k$, number or density of each species in each plot, following the same structure and subscript notation as $\textbf{Y}_k$) into the number of each species actually observed in each plot ($\textbf{Y}_k$):
 
 \begin{equation}
+\label{eq:1}
 \textbf{Y}_k = f_{y_k|z_k}(\textbf{Z}_k, \textbf{X}_{(y|z), k}, \Theta_{(y|z), k})
 \end{equation}
 
-where $\textbf{X}_{(y|z), k}$ are detection-associated covariates and $\Theta_{(y|z), k}$ are detection-function parameters. The unobserved true state ($\textbf{Z}$) is a multi-dimensional, evolving, and non-negative variable that could be integer-valued (if the state is represented by the number of individuals) or continuous (if the state is represented by the density of individuals). In either case, we can consider a general process model $f_{z_k|z_{k-1}}$ that describes the evolution of $\textbf{Z}$ from one time point ($k-1$) to the next ($k$):
+where $\textbf{X}_{(y|z), k}$ are detection-associated covariates and $\Theta_{(y|z), k}$ are detection-function parameters. Both $\textbf{X}_{(y|z), k}$ and $\Theta_{(y|z), k}$ are $J$-column matrices (representing the number of plots), but with different numbers of rows than $\textbf{Y}_k$ and $\textbf{Z}_k$ (both of which have $I$ rows), reflecting the fact that they contain different characteristics (\emph{i.e.}, covariates, parameters). 
+
+The unobserved true state ($\textbf{Z}$) is a multi-dimensional, evolving, and non-negative variable that could be integer-valued (if the state is represented by the number of individuals) or continuous (if the state is represented by the density of individuals). In either case, we use a general process model $f_{z_k|z_{k-1}}$ that describes the evolution of $\textbf{Z}$ from one time point ($k-1$) to the next ($k$):
 
 \begin{equation}
+\label{eq:2}
 \textbf{Z}_{k} = f_{z_k|z_{k-1}}(\textbf{Z}_{k-1}, \Delta t_{(k-1):k}, \textbf{X}_{(z_k|z_{k-1}), k},\Theta_{(z_k|z_{k-1}), k})
 \end{equation}
 
-where $\Delta t_{(k-1):k}$ is the time step ($t_k - t_{k-1}$), $\textbf{X}_{(z_k|z_{k-1}), k}$ are process-associated covariates, and $\Theta_{(z_k|z_{k-1}), k}$ are process-function parameters. $f_{z_k|z_{k-1}}$ is general; it can be phenomenological or mechanistic, but it must generate appropriate values for $\textbf{Z}_{k}$. Given the evolutionary aspect of the model, we must define a starting point for $\textbf{Z}$: $\textbf{Z}_{k=0}$. To do so, we use the general initialization function $f_{\textbf{Z}_0}$, which only depends upon initialization-associated covariates $\textbf{X}_{z_0}$ and parameters $\Theta_{z_0}$:
+where $\Delta t_{(k-1):k}$ is the time step ($t_k - t_{k-1}$), $\textbf{X}_{(z_k|z_{k-1}), k}$ are process-associated covariates, and $\Theta_{(z_k|z_{k-1}), k}$ are process-function parameters. $\textbf{X}_{(z_k|z_{k-1}), k}$ and $\Theta_{(z_k|z_{k-1}), k}$ are both $J$-column matrices, corresponding to  the number of plots, but they have different numbers of rows than $\textbf{Y}_k$ and $\textbf{Z}_k$ (both of which have $I$ rows), because they contain covariates and parameters, rather than data on species. $f_{z_k|z_{k-1}}$ is general; it can be phenomenological or mechanistic, but it must generate appropriate values for $\textbf{Z}_{k}$. 
+
+Given the evolutionary aspect of the model, we must define a starting point for $\textbf{Z}$: $\textbf{Z}_{k=0}$. To do so, we use the general initialization function $f_{\textbf{Z}_0}$, which only depends upon initialization-associated covariates $\textbf{X}_{z_0}$ and parameters $\Theta_{z_0}$:
 
 \begin{equation}
+\label{eq:3}
 \textbf{Z}_{k=0} = f_{z_0}(\textbf{X}_{z_0}, \Theta_{z_0})
 \end{equation}
 
-Thus, each model ($\mathcal{M}_m$, for $m$ in $1 \ldots M$) is defined by observation, process evolution, and initialization functions, notated as $f^m_{y_k|z_k}$, $f^m_{y_k|z_k}$, and $f^m_{\textbf{Z}_0}$, respectively (note: the $m$'s are superscripted index values, not exponents). 
+$\textbf{X}_{(z_0)}$ and $\Theta_{(z_0)}$ are $J$-column matrices (one column for each plot), with the number of rows corresponding to the number of initialization-associated covariates and parameters, respectively. 
+
+Thus, each model ($\mathcal{M}_m$, for $m$ in $1 \ldots M$) is defined by observation, process evolution, and initialization functions, notated as $f^m_{y_k|z_k}$, $f^m_{y_k|z_k}$, and $f^m_{\textbf{Z}_0}$, respectively (note: the $m$'s are superscripted index values, not exponents). This is a general framework into which any state-space model can be placed, as long as it generates non-negative integer values for observations $y$. 
 
 \subsection{Likelihood Estimation}
 \label{subsec:devmods_le}
@@ -136,44 +148,69 @@ Thus, each model ($\mathcal{M}_m$, for $m$ in $1 \ldots M$) is defined by observ
 Likelihood forms the basis of model-based statistical inference \citep{Pawitan2001} and is a key component in our evaluation and use of our forecasts. The total likelihood of a particular model ($\mathcal{M}_m$) given the specific set of data actually observed ($\textbf{Y}^{*}_{1:K}$) is written $\mathcal{L}(\mathcal{M}_m|\textbf{Y}^{*}_{1:K})$. This likelihood is the data-based, long-running measure of support for that model and is the product of the conditional likelihoods of the model and all previous observations, given each observation:
 
 \begin{equation}
+\label{eq:4}
 \mathcal{L}(\mathcal{M}_m|\textbf{Y}^{*}_{1:K}) = \prod_{k = 1}^{K}{\mathcal{L}_k(\mathcal{M}_m, \textbf{Y}^{*}_{1:k-1}|\textbf{Y}^{*}_{k})},
 \end{equation}
 
 which is equal to the product of the probabilities of each observation, given the model and the history of observations to that point:
 
 \begin{equation}
+\label{eq:5}
 \mathcal{L}(\mathcal{M}_m|\textbf{Y}^{*}_{1:K}) = \prod_{k = 1}^{K}{\mathbb{P}[\textbf{Y}^{*}_{k}|\mathcal{M}_m, \textbf{Y}^{*}_{1:k-1}]}
 \end{equation}
 
-According to Eq. 5, in order for us to determine the likelihood of the model, we must be able to calculate the probability of each observation ($\textbf{Y}^{*}_{k}$) given the history of previous observations ($\textbf{Y}^{*}_{1:(k-1)}$) and the model ($\mathcal{M}_m$). However, given our usage of a state-space model, $Y$ is conditionally independent, and so there is no direct relationship between $\textbf{Y}^{*}_{1:(k-1)}$ and $\textbf{Y}^{*}_{k}$. Rather, we rely on the indirect relationship between  observations $\textbf{Y}^{*}_{k-1}$ and $\textbf{Y}^{*}_{k}$ that occurs via the partially observed states at those times ($\textbf{Z}_{k-1}$ and $\textbf{Z}_{k}$). 
+According to Eq. \ref{eq:5}, in order for us to determine the likelihood of the model, we must be able to calculate the probability of each observation ($\textbf{Y}^{*}_{k}$) given the history of previous observations ($\textbf{Y}^{*}_{1:(k-1)}$) and the model ($\mathcal{M}_m$). However, given our usage of a state-space model, $Y$ is conditionally independent: there is no direct relationship between $\textbf{Y}^{*}_{1:(k-1)}$ and $\textbf{Y}^{*}_{k}$. Rather, we rely on the indirect relationship between  observations $\textbf{Y}^{*}_{k-1}$ and $\textbf{Y}^{*}_{k}$ that occurs via the partially observed states at those times ($\textbf{Z}_{k-1}$ and $\textbf{Z}_{k}$) (Eq.\ref{eq:2}). 
 
-For a given time point $k$, we use Bayes' theorem  to infer the state at $k-1$ ($\textbf{Z}_{k-1}$) from the history of observations $\textbf{Y}^{*}_{1:(k-1)}$, then project the state forward to $k$ using the process evolution function, and finally transform the state $\textbf{Z}_{k}$ to the observation at $k$, $\textbf{Y}^{*}_{k}$. We factorize the point-specific probability accordingly:
+When evaluating the observations at a given time point $k$, we use Bayes' theorem  to infer the state at $k-1$ ($\textbf{Z}_{k-1}$) from the history of observations $\textbf{Y}^{*}_{1:(k-1)}$, then project the state forward to $k$ using the process evolution function, and finally transform the state $\textbf{Z}_{k}$ to the observation at $k$, $\textbf{Y}^{*}_{k}$. We factorize the point-specific probability accordingly:
 
 \begin{equation}
+\label{eq:6}
 \mathbb{P}[\textbf{Y}^{*}_{k}|\mathcal{M}_m, \textbf{Y}^{*}_{1:k-1}] = \sum_{\textbf{Z}_k}{\mathbb{P}[\textbf{Y}^*_k|\textbf{Z}_k, \mathcal{M}_m]}\sum_{\textbf{Z}_{k-1}}{\mathbb{P}[\textbf{Z}_k|\textbf{Z}_{k-1}, \mathcal{M}_m]\mathbb{P}[\textbf{Z}_{k-1}|\textbf{Y}^*_{1:(k-1)}, \mathcal{M}_m]}
 \end{equation}
 
 In order to retain generality regarding model structure, we leverage flexible, simulation-based approaches to estimate model likelihood, thereby allowing us to avoid evaluating probability densities directly \citep{Breto2009, He2010, Ionides2015}. Specifically, we rely on sequential Monte Carlo (SMC) methods, often referred to as \emph{particle filtration} to numerically estimate likelihoods \citep{Kitagawa1987, Doucet2001, Ionides2006}
 
-For notation, we refer to $\textbf{Z}_{k}|\textbf{Y}^*_{1:k}$ as the \emph{filtering distribution} (at $k$) and $\textbf{Z}_{k}|\textbf{Y}^*_{1:(k-1)}$ as the \emph{prediction distribution} (at $k$). To estimate the probability of a specific observation (\emph{i.e.}, the likelihood of the model given that observation), we first draw (following Bayes' theorem) a set of $Q$ particles from the filtering distribution at the last observation ($k-1$), which we write as $\textbf{Z}^{F}_{(k-1),q}$, $q = 1, \ldots, Q$ (the $F$ is a superscript to refer to filtering, not an exponent). We then use the process evolution function (Eq. 2) to simulate forward in time and generate the associated prediction distribution at $k$:
+For notation, we refer to $\textbf{Z}_{k}|\textbf{Y}^*_{1:k}$ as the \emph{filtering distribution} (at $k$) and $\textbf{Z}_{k}|\textbf{Y}^*_{1:(k-1)}$ as the \emph{prediction distribution} (at $k$). To estimate the probability of a specific observation (\emph{i.e.}, the likelihood of the model given that observation), we first draw (following Bayes' theorem) a set of $Q$ particles from the filtering distribution at the last observation ($k-1$), which we write as $\textbf{Z}^{F}_{(k-1),q}$, $q = 1, \ldots, Q$ (the $F$ is a superscript to refer to filtering, not an exponent). We then use the process evolution function (Eq. \ref{eq:2}) to simulate forward in time and generate the associated prediction distribution at $k$:
 
 \begin{equation}
+\label{eq:7}
 \textbf{Z}^{P}_{k,q} \sim f_{z_k|z_{k-1}}(\textbf{Z}^{F}_{(k-1),q}, \Delta t_{(k-1):k}, \textbf{Z}_{(z_k|z_{k-1}), k},\Theta_{(z_k|z_{k-1}), k}), \; q = 1, \ldots, Q
 \end{equation}
 
-We then resample the prediction distribution with weights according to the observation function (Eq. 1), which generates a distribution of $\textbf{Y}^{*}_{k}|\textbf{Z}_{k}$ given $\textbf{Y}^{*}_{1:(k-1)}$. Therefore, the conditional likelihood of the model given the observation at $k$ is
+We then resample the prediction distribution with weights according to the observation function (Eq. \ref{eq:1}), which generates a distribution of $\textbf{Y}^{*}_{k}|\textbf{Z}_{k}$ given $\textbf{Y}^{*}_{1:(k-1)}$. Therefore, the conditional likelihood of the model given the observation at $k$ is
 
 \begin{equation}
+\label{eq:8}
 \mathcal{L}_k(\mathcal{M}_m, \textbf{Y}^{*}_{1:(k-1)} | \textbf{Y}^{*}_{k}) \approx \frac{1}{Q}\sum_{q=1}^{Q}{\mathbb{P}[\textbf{Y}^*_k|\textbf{Z}^{P}_{k, q}, \mathcal{M}_m]}, \; q = 1, \ldots, Q
 \end{equation}
 
-We iterate Eq. 8 through the data from $k = 1$ to $k = K$, at which point we have obtained the conditional likelihood of each observation. These values are then multiplied together to achieve the likelihood of the model given the entire set of observations:
+We iterate Eq.\ref{eq:8} through the data from $k = 1$ to $k = K$, at which point we have obtained the conditional likelihood of each observation. These values are then multiplied together to achieve the likelihood of the model given the entire set of observations:
 
 \begin{equation}
+\label{eq:9}
 \mathcal{L}(\mathcal{M}_m | \textbf{Y}^{*}_{1:K}) \approx \prod_{k = 1}^{K}{\frac{1}{Q}\sum_{q=1}^{Q}{\mathbb{P}[\textbf{Y}^*_k|\textbf{Z}^{P}_{k, q}, \mathcal{M}_m]}}, \; q = 1, \ldots, Q
 \end{equation}
 
-This equation forms the foundation of our statistical inference by describing how we generate an unbiased estimate of the likelihood for a model via simulation of the model and comparison to the observed data \citep{Doucet2001,King2016}
+This equation forms the foundation of our statistical inference by describing how we generate an unbiased estimate of the likelihood for a model via simulation of the model and comparison to the observed data \citep{Doucet2001, King2016}.
+
+\subsection{Defining Models}
+\label{subsec:devmods_md}
+
+Here we are using the term "model" in a general sense in that different models, say $\mathcal{M}_1$ and $\mathcal{M}_2$, could differ in parameter values but have the same structure, or they could differ in qualitative structure. In some situations (for example, producing an ensemble model or combing multiple parameter models within a structural model), we may be interested in subsuming models in a hierarchical sense such that a singular model $\mathcal{M}_m$ is actually a cluster of submodels $\mathcal{M}_{m_s}$ for $s$ in $1 \ldots S$. In such situations, each individual model would have a weight $w_{m_s}$, which reflects the contribution of that submodel $m_s$ to the model $m$. The sum of the weights ($\sum_{s = 1}^{S}{w_{m_s}}$) equals one, ensuring that the higher-level model is still a valid model with respect to the observations.
+
+\subsection{Parameter Estimation}
+\label{subsec:devmods_pe}
+
+\subsection{Model Evaluation and Comparison}
+\label{subsec:devmods_mec}
+
+\subsection{Ensembles}
+\label{subsec:devmods_ens}
+
+\section{Specific Models}
+\label{sec:mods}
+
+Recall from above that each model ($\mathcal{M}_m$, for $m$ in $1 \ldots M$) is defined by observation, process evolution, and initialization functions: $f^m_{y_k|z_k}$, $f^m_{y_k|z_k}$, and $f^m_{\textbf{Z}_0}$. 
 
 \bibliography{refs}  
 \end{document}
