--- a/modeldoc.tex
+++ b/modeldoc.tex
@@ -106,6 +106,23 @@ Currently, there is no intercept-only model included. The single best model of t
 
 The modeling approach proposed here is based on a data-assimilation approach to forecasting using dynamical state-space models (a.k.a. partially observed Markov process models), where the observed data are considered a partial sample of an underlying true state that evolves through time \citep{Ionides2006, King2016} and the models used to estimate and forecast the true state are iteratively evaluated and updated with each new observation. We use a suite of competing models to make inference about the historic and current state of the system and to produce forecasts of expected future observations. In addition, statistically weighted ensemble models are constructed based on long-running model accuracy. Ongoing data collections provide new observations, which are used to iteratively evaluate the models and produce new predictions via the forecast cycle \citep{Dietze2017}. 
 
+Recognizing the evolving nature of forecast model suites, however, we broaden Deitze's (\citeyear{Dietze2017}) forecast cycle to accommodate a dynamic model set while still remaining a focused project. We consider the following steps of a forecasting project:
+
+\begin{enumerate}
+\item{Define question of interest} 
+\item{Identify best metric(s) to inform [1]}
+\item{Propose potential influences on [2]} 
+\item{Construct models that represent [3]}
+\item{Statistically fit parameter distributions within [4] using the available data}
+\item{Produce forecasts using [4] at [5]} 
+\item{Collect new data}
+\item{Evaluate [6] based on [7]}
+\end{enumerate}
+
+Evaluations in step $[8]$ are the foundation of constructing ensembles of models as well as determining if additional models need to be added to $[4]$ and--if needed--can be used to ultimately remove specific models from $[4]$. 
+
+After completion of $[8]$ for a given set of predictions and observations, the cycle loops back to at least $[5]$, updating the parameter distributions based on the new data. It is possible to loop back to $[3]$ or $[4]$ (by proposing a new influence or a new model formulation, respectively), but not to earlier than $[3]$, thereby ensuring that the models being used within the project are all answering the same question using the same metric (\emph{i.e.}, the same response variable). It is expected that the process of forecasting will generate new questions and metrics to evaluate, but we consider loops back to $[1]$ or $[2]$ to be significant enough (\emph{e.g.}, existing models would need to be reconfigured to predict different response data) to warrant treatment as a new project.
+
 \subsection{General Framework and Notation}
 \label{subsec:devmods_gf}
 
@@ -210,7 +227,7 @@ Here we are using the term "model" in a general sense in that different models, 
 \section{Specific Models}
 \label{sec:mods}
 
-Recall from above that each model ($\mathcal{M}_m$, for $m$ in $1 \ldots M$) is defined by observation, process evolution, and initialization functions: $f^m_{y_k|z_k}$, $f^m_{y_k|z_k}$, and $f^m_{\textbf{Z}_0}$. 
+Recall from above that each model ($\mathcal{M}_m$, for $m$ in $1 \ldots M$) is defined by observation, process evolution, and initialization functions: $f^m_{y_k|z_k}$, $f^m_{y_k|z_k}$, and $f^m_{\textbf{Z}_0}$. For the purposes of compactly listing models here, a specific model $\mathcal{M}_m$ encompasses parameter uncertainty within a qualitative structure (\emph{e.g.}, parameter inclusion or functional form). 
 
 \bibliography{refs}  
 \end{document}
